[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Starship.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Scripts/LeftLane.gd" type="Script" id=3]
[ext_resource path="res://Assets/Scripts/RightLane.gd" type="Script" id=4]
[ext_resource path="res://Assets/Scripts/SpaceParticles.gd" type="Script" id=5]
[ext_resource path="res://SpaceParticle.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Sound/alien_beacon.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Textures/space_bg.jpg" type="Texture" id=8]
[ext_resource path="res://EnergyBar.gd" type="Script" id=9]
[ext_resource path="res://Assets/Fonts/New Athletic M54.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/Fonts/techno_hideo_bold.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Assets/Scripts/LevelMessage.gd" type="Script" id=12]

[sub_resource type="PanoramaSky" id=1]

radiance_size = 4
panorama = ExtResource( 8 )

[sub_resource type="Environment" id=2]

background_mode = 2
background_sky = SubResource( 1 )
background_sky_custom_fov = 0.0
background_color = Color( 0, 0, 0, 1 )
background_energy = 1.0
background_canvas_max_layer = 0
ambient_light_color = Color( 0.518741, 0.523438, 0.437561, 1 )
ambient_light_energy = 0.5
ambient_light_sky_contribution = 0.1
fog_enabled = false
fog_color = Color( 0.263214, 0.278091, 0.292969, 1 )
fog_sun_color = Color( 0.663973, 0.667969, 0.540115, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 10.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = true
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 1.0
glow_strength = 1.0
glow_bloom = 1.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Ambient Light", "Background", "Glow", "Glow/levels" ]

[sub_resource type="ParticlesMaterial" id=3]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 100.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = false
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.5
angular_velocity = 0.0
angular_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Emission Shape", "Initial Velocity" ]

[sub_resource type="SpatialMaterial" id=4]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 0
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 1, 1, 1, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 0.5
roughness_texture_channel = 0
emission_enabled = true
emission = Color( 0.714844, 0.846283, 1, 1 )
emission_energy = 8.0
emission_operator = 0
emission_on_uv2 = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Emission" ]

[sub_resource type="QuadMesh" id=5]

material = SubResource( 4 )
custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector2( 0.5, 0.5 )

[sub_resource type="StyleBoxFlat" id=6]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.5625, 0, 0, 1 )
draw_center = true
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0429688, 0.0409546, 0.0409546, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=7]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.136719, 0.126572, 0.126572, 1 )
draw_center = true
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=8]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0.173828, 0.695313, 1 )
draw_center = true
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.09375, 0.0922852, 0.0922852, 1 )
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius" ]

[sub_resource type="StyleBoxFlat" id=9]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.152344, 0.135086, 0.135086, 1 )
draw_center = true
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0585938, 0.0574493, 0.0574493, 1 )
border_blend = true
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width" ]

[sub_resource type="DynamicFont" id=10]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 10 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=11]

size = 64
use_mipmaps = false
use_filter = false
extra_spacing_char = 2
font_data = ExtResource( 10 )
_sections_unfolded = [ "Extra Spacing", "Font" ]

[sub_resource type="DynamicFont" id=12]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 11 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Main" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="Starship" parent="." index="0" instance=ExtResource( 2 )]

_sections_unfolded = [ "Transform" ]

[node name="DirectionalLight" type="DirectionalLight" parent="." index="1"]

transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 18.5991, 0 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Transform" ]

[node name="LeftLane" type="Position3D" parent="." index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -30 )
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CenterLane" type="Position3D" parent="." index="3"]

_sections_unfolded = [ "Transform" ]

[node name="RightLane" type="Position3D" parent="." index="4"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 30 )
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Entrance" type="Position3D" parent="." index="5"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -40.0239, 0, 0 )

[node name="SpaceParticles" type="Spatial" parent="." index="6"]

script = ExtResource( 5 )
SpaceParticle = ExtResource( 6 )
num_particles = 15
particle_speed = 75

[node name="SpeedTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = true

[node name="AmbientSound" type="AudioStreamPlayer3D" parent="." index="8"]

stream = ExtResource( 7 )
attenuation_model = 0
unit_db = -6.0
unit_size = 2.0
max_db = 3.0
pitch_scale = 1.0
autoplay = true
max_distance = 0.0
out_of_range_mode = 0
bus = "Master"
area_mask = 1
emission_angle_enabled = false
emission_angle_degrees = 45.0
emission_angle_filter_attenuation_db = -12.0
attenuation_filter_cutoff_hz = 5000.0
attenuation_filter_db = -24.0
doppler_tracking = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="9"]

environment = SubResource( 2 )

[node name="Camera" type="Camera" parent="WorldEnvironment" index="0"]

transform = Transform( -4.37114e-008, 0.0871557, -0.996195, 0, 0.996195, 0.0871557, 1, 3.8097e-009, -4.35451e-008, -52.0556, 36.047, 0 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 5.0
near = 0.05
far = 1000.0
_sections_unfolded = [ "Transform" ]

[node name="Particles" type="Particles" parent="WorldEnvironment/Camera" index="0"]

transform = Transform( 1, 0, 5.68434e-014, -4.44089e-016, 1, -1.65893e-016, -5.32907e-014, -1.65894e-016, 1, -1.36424e-012, 1.90735e-006, -500 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
emitting = true
amount = 50
lifetime = 10.0
one_shot = false
preprocess = 5.0
speed_scale = 2.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_aabb = AABB( -4, -4, -4, 8, 8, 8 )
local_coords = true
draw_order = 0
process_material = SubResource( 3 )
draw_passes = 1
draw_pass_1 = SubResource( 5 )
_sections_unfolded = [ "Draw Passes", "Process Material", "Time", "Transform" ]

[node name="UI" type="Container" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_right = 1027.0
margin_bottom = 601.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="EnergyBar" type="ProgressBar" parent="UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 10.0
margin_right = 259.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = false
script = ExtResource( 9 )
_sections_unfolded = [ "Percent" ]

[node name="ShieldBar" type="ProgressBar" parent="UI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 35.0
margin_right = 259.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = true
_sections_unfolded = [ "custom_styles" ]

[node name="Timer" type="Label" parent="UI" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 904.0
margin_top = 27.0
margin_right = 964.0
margin_bottom = 66.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 10 )
text = "25.6"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Message" type="Label" parent="UI" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 415.0
margin_top = 240.0
margin_right = 654.0
margin_bottom = 317.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.6875, 0, 0, 1 )
text = "You Died!
Score "
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Grow Direction", "Visibility", "custom_colors", "custom_fonts" ]

[node name="LevelMessage" type="Label" parent="UI" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 397.0
margin_top = 66.0
margin_right = 664.0
margin_bottom = 106.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.738281, 0.766907, 1, 1 )
text = "1"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 12 )
_sections_unfolded = [ "Visibility" ]

[node name="LevelMTimer" type="Timer" parent="UI/LevelMessage" index="0"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="DeathTimer" type="Timer" parent="UI" index="5"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="player_dead" from="Starship" to="." method="_on_Starship_player_dead"]

[connection signal="timeout" from="SpeedTimer" to="." method="_on_SpeedTimer_timeout"]

[connection signal="timeout" from="UI/LevelMessage/LevelMTimer" to="UI/LevelMessage" method="_on_LevelMTimer_timeout"]

[connection signal="timeout" from="UI/DeathTimer" to="." method="_on_DeathTimer_timeout"]


